Se realizan mejoras en el frontend como en el backend (Se refactoriza los service) 25/04/2026